Trucks/force-app/main/default/objects/Truck__c/Truck__c.object-meta.xml
<CustomObject>
    <description>This is a custom field that will be used to track all the cars in this field</description>
    <label>Truck</label>
    <nameField>
        <label>Trucks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trucks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>