Trucks/force-app/main/default/objects/Truck__c/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <description>This is the insurance number of the vehicle.</description>
    <label>Insurance Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>