Trucks/force-app/main/default/objects/Truck__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>This display the location that determine the latitude and longitude of the vehicles.</description>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>