Trucks/force-app/main/default/objects/Truck__c/fields/Number_Plate__c.field-meta.xml
<CustomField>
    <fullName>Number_Plate__c</fullName>
    <description>This is the car number of the vehicle</description>
    <inlineHelpText>Car number should have both Alphabets and Numbers</inlineHelpText>
    <label>Number Plate</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>