Trucks/force-app/main/default/objects/Truck__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>This is the date the vehicle was registered</description>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>