Trucks/force-app/main/default/objects/Truck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_Plate__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Insurance_Number__c</columns>
    <columns>Observations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>